--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.62.1",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-modal-datetime-picker": "^8.6.0",
+    "react-native-numeric-input": "^1.8.3",
     "react-native-paper": "^3.8.0",
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^0.7.3",
