--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         minSdkVersion = 16
         compileSdkVersion = 28
         targetSdkVersion = 28
+        supportLibVersion = '28.0.0'
     }
     repositories {
         google()
@@ -34,5 +35,8 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://www.jitpack.io' }
+
+        // ADD THIS
+        maven { url 'https://maven.google.com' }
     }
 }
