--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.25.3",
     "react": "16.11.0",
     "react-native": "0.62.1",
+    "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-image-crop-picker": "^0.32.2",
     "react-native-modal-datetime-picker": "^8.6.0",
@@ -28,6 +29,7 @@
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
+    "react-native-uuid": "^1.4.9",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
