--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^5.2.5",
     "@react-navigation/native": "^5.1.4",
     "@react-navigation/stack": "^5.2.9",
+    "buffer": "^5.6.0",
     "moment": "^2.25.3",
     "react": "16.11.0",
     "react-native": "0.62.1",
