--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -208,6 +208,9 @@ dependencies {
 
     implementation "com.google.firebase:firebase-auth:17.0.0"
 
+    implementation "com.google.firebase:firebase-messaging:18.0.0"
+    implementation 'me.leolin:ShortcutBadger:1.1.21@aar' // <-- Add this line if you wish to use badge on Android
+
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
       exclude group:'com.facebook.fbjni'
     }
